--- a/survey.html
+++ b/survey.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
@@ -22,10 +22,10 @@
     </header>
 
     <main>
-      <p class= "heading">Survey</p>
+      <h2>Survey</h2>
       <div class="card">
         <div class="flex">
-          <img class="photo" src= "img/concert01.jpg">
+          <img class="photo" src= "img/concert01.jpg" alt="Concert Photo">
           <div class="container">
             <form class = "survey">
               <p>Who is your favorite band member:</p>
@@ -55,7 +55,7 @@
           </div>
         </div>
       </div>
-      <p class= "heading">Newsletter</p>
+      <h2>Newsletter</h2>
       <div class="card">
         <div class="flex">
           <img class="photo" src= "img/the_band.jpg">
