--- a/tour.html
+++ b/tour.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
       <meta charset="utf-8">
       <link href="css/styles.css" rel="stylesheet" type="text/css" />
@@ -25,7 +25,7 @@
       <div class="card">
         <div class="flex">
           <img class="pick" src= "img/guitar_pick.png" alt="This is a guitar pick">
-          <p class= "heading">Tour Dates</p>
+          <h2>Tour Dates</h2>
           <img class="pick" src= "img/guitar_pick.png" alt="This is a guitar pick also">
           <pre>
                 Date                             Venue                             Location
@@ -37,7 +37,7 @@
         </div>
       </div>
     </main>
-    
+
     <footer>
       <ul>
         <li><a href="#" class="social twitter"><img src= "img/twitter-32.png"></a></li>
