--- a/survey.html
+++ b/survey.html
@@ -25,7 +25,7 @@
       <h2>Survey</h2>
       <div class="card">
         <div class="flex">
-          <img class="photo" src= "img/concert01.jpg" alt="Concert Photo">
+          <img class="photo" src= "img/concert01.jpg" alt="">
           <div class="container">
             <form class = "survey">
               <p>Who is your favorite band member:</p>
@@ -58,7 +58,7 @@
       <h2>Newsletter</h2>
       <div class="card">
         <div class="flex">
-          <img class="photo" src= "img/the_band.jpg">
+          <img class="photo" src= "img/the_band.jpg" alt="">
             <div class="container">
               <form class="newsletter">
                   <p>Name: <input type ="text" name="textfield"></p>
