--- a/tour.html
+++ b/tour.html
@@ -24,9 +24,9 @@
     <main >
       <div class="card">
         <div class="flex">
-          <img class="pick" src= "img/guitar_pick.png" alt="This is a guitar pick">
+          <img class="pick" src= "img/guitar_pick.png" alt="">
           <h2>Tour Dates</h2>
-          <img class="pick" src= "img/guitar_pick.png" alt="This is a guitar pick also">
+          <img class="pick" src= "img/guitar_pick.png" alt="">
           <pre>
                 Date                             Venue                             Location
                 Mar 10 - 12                 The Warfield                  San Francisco, CA
