--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="main-nav">
+    <div class="main-nav" role="navigation">
       <ul class="nav">
         <li class="name"><a href="#">Accessible Frog</a></li>
         <li><a href="tour.html">Tour</a></li>
@@ -17,12 +17,12 @@
       </ul>
     </div>
 
-    <header>
+    <header role="banner">
       <h1>Accessible Frog</h1>
       <p>we make awesome music</p>
     </header>
 
-    <main>
+    <main role="main">
       <div class="card">
         <div class="flex">
           <img class="photo" src= "img/soul_of_the_frog.jpg" alt="Soul Of The Frog Album Cover">
@@ -46,11 +46,11 @@
       </div>
     </main>
 
-    <footer>
+    <footer role="contentinfo">
       <ul>
-        <li><a href="#" class="social twitter"></a></li>
-        <li><a href="#" class="social youtube"></a></li>
-        <li><a href="#" class="social spotify"></a></li>
+        <li><a href="img/img/twitter-32.png" class="social twitter"><img src= "img/twitter-32.png" alt="Twitter Icon Link"></a></li>
+        <li><a href="img/img/youtube-32.png" class="social youtube"><img src= "img/youtube-32.png" alt="Youtube Icon Link"></a></li>
+        <li><a href="img/spotify-32.png" class="social spotify"><img src= "img/spotify-32.png" alt="Spotify Icon Link"></a></li>
       </ul>
       <p class="copyright">Copyright 2015, Accessible Frog</p>
     </footer>
