--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
 
     <footer role="contentinfo">
       <ul>
-        <li><a href="img/img/twitter-32.png" class="social twitter"><img src= "img/twitter-32.png" alt="Twitter Icon Link"></a></li>
-        <li><a href="img/img/youtube-32.png" class="social youtube"><img src= "img/youtube-32.png" alt="Youtube Icon Link"></a></li>
-        <li><a href="img/spotify-32.png" class="social spotify"><img src= "img/spotify-32.png" alt="Spotify Icon Link"></a></li>
+        <li><a href="img/img/twitter-32.png" class="social twitter">
+          <img src= "img/twitter-32.png" width="32" height="32" alt="Twitter Icon Link"></a></li>
+        <li><a href="img/img/youtube-32.png" class="social youtube">
+          <img src= "img/youtube-32.png" width="32" height="32" alt="Youtube Icon Link"></a></li>
+        <li><a href="img/spotify-32.png" class="social spotify">
+          <img src= "img/spotify-32.png" width="32" height="32" alt="Spotify Icon Link"></a></li>
       </ul>
       <p class="copyright">Copyright 2015, Accessible Frog</p>
     </footer>
