--- a/tour.html
+++ b/tour.html
@@ -33,22 +33,22 @@
             <th scope="col">Location</th>
           </tr>
           <tr>
-            <td>Mar 10 - 12</th>
+            <td>Mar 10 - 12</td>
             <td>The Warfield </td>
             <td>San Francisco, CA</td>
           </tr>
           <tr>
-            <td>Mar 20 - 23</th>
+            <td>Mar 20 - 23</td>
             <td>Pepsi Center</td>
             <td>Denver, CO</td>
           </tr>
           <tr>
-            <td>Apr 2 - 4</th>
+            <td>Apr 2 - 4</td>
             <td>Beacon Theatre</td>
             <td>New York City, NY</td>
           </tr>
           <tr>
-            <td>Apr 10</th>
+            <td>Apr 10</td>
             <td>Paramount Theatre </td>
             <td>Seattle, WA</td>
           </tr>
@@ -59,11 +59,11 @@
 
     <footer role="contentinfo">
       <ul>
-        <li><a href="img/img/twitter-32.png" class="social twitter">
+        <li><a href="#" class="social twitter">
           <img src= "img/twitter-32.png" width="32" height="32" alt="Twitter Icon Link"></a></li>
-        <li><a href="img/img/youtube-32.png" class="social youtube">
+        <li><a href="#" class="social youtube">
           <img src= "img/youtube-32.png" width="32" height="32" alt="Youtube Icon Link"></a></li>
-        <li><a href="img/spotify-32.png" class="social spotify">
+        <li><a href="#" class="social spotify">
           <img src= "img/spotify-32.png" width="32" height="32" alt="Spotify Icon Link"></a></li>
       </ul>
       <p class="copyright">Copyright 2015, Accessible Frog</p>
